--- a/index.html
+++ b/index.html
@@ -1,175 +1,201 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Miranda Flow — Sistema Z</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Miranda Flow Boutique</title>
 
-<meta name="viewport"
-content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600;800;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700;900&display=swap" rel="stylesheet">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Montserrat',sans-serif}
-body{background:#000;color:#fff;overflow-x:hidden}
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  background:#000;
+  color:#fff;
+  font-family:'Inter',sans-serif;
+  overflow-x:hidden;
+}
 
 /* ===== HEADER ===== */
 header{
-position:fixed;top:0;width:100%;height:70px;
-display:flex;align-items:center;justify-content:space-between;
-padding:0 40px;
-background:rgba(0,0,0,.65);
-backdrop-filter:blur(16px);
-z-index:100;
+  position:fixed;
+  top:0;left:0;
+  width:100%;
+  padding:18px 60px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  background:rgba(0,0,0,.55);
+  backdrop-filter:blur(12px);
+  z-index:1000;
 }
-
-.brand{
-display:flex;align-items:center;gap:14px;
-letter-spacing:4px;font-weight:800;
+header .left{
+  display:flex;
+  align-items:center;
+  gap:14px;
 }
-.brand img{
-height:42px;
-filter:drop-shadow(0 0 18px rgba(255,255,255,.5));
-}
+header img{width:36px}
+header strong{letter-spacing:2px;font-weight:700}
 
 nav a{
-margin-left:36px;
-color:#fff;text-decoration:none;
-letter-spacing:3px;font-size:13px;
-opacity:.7;
+  color:#bbb;
+  margin-left:30px;
+  text-decoration:none;
+  letter-spacing:2px;
+  font-size:13px;
 }
-nav a:hover{opacity:1}
+nav a:hover{color:#fff}
 
 /* ===== HERO ===== */
 .hero{
-min-height:100vh;
-padding-top:120px;
-display:flex;align-items:center;
-position:relative;
+  height:100vh;
+  display:flex;
+  align-items:center;
+  padding-left:8%;
+  position:relative;
 }
-
 .hero::before{
-content:"";
-position:absolute;inset:-25%;
-background:
-radial-gradient(circle at center, rgba(0,0,0,.4), #000 70%),
-url("logo.jpg") center/65% no-repeat;
-opacity:.35;
-animation:logoFloat 20s ease-in-out infinite;
+  content:"";
+  position:absolute;
+  inset:0;
+  background:url('logo.jpg') center/contain no-repeat;
+  opacity:.08;
+  filter:blur(6px);
+  animation:floatLogo 20s infinite alternate ease-in-out;
 }
-
-@keyframes logoFloat{
-0%{transform:scale(1) translateY(0)}
-50%{transform:scale(1.08) translateY(-30px)}
-100%{transform:scale(1) translateY(0)}
+@keyframes floatLogo{
+  from{transform:scale(1) translateY(0)}
+  to{transform:scale(1.08) translateY(-25px)}
 }
-
 .hero-content{
-position:relative;
-padding-left:8vw;
-max-width:900px;
+  position:relative;
+  max-width:620px;
+  animation:fadeUp 1.3s ease forwards;
 }
-
+@keyframes fadeUp{
+  from{opacity:0;transform:translateY(40px)}
+  to{opacity:1;transform:translateY(0)}
+}
 .hero h1{
-font-size:clamp(58px,9vw,110px);
-font-weight:900;
-letter-spacing:6px;
+  font-size:76px;
+  font-weight:900;
+  letter-spacing:3px;
+  text-shadow:0 20px 60px rgba(0,0,0,.8);
 }
-
 .hero p{
-margin-top:24px;
-font-size:18px;
-max-width:520px;
-opacity:.85;
-line-height:1.6;
+  margin:28px 0;
+  color:#bbb;
+  font-size:18px;
+  line-height:1.6;
+}
+.hero button{
+  padding:16px 42px;
+  background:transparent;
+  border:1px solid #fff;
+  color:#fff;
+  letter-spacing:3px;
+  cursor:pointer;
+  transition:.35s;
+}
+.hero button:hover{
+  background:#fff;
+  color:#000;
 }
 
-/* ===== PRENDAS ===== */
-.prendas{
-padding:180px 8vw 140px;
+/* ===== SECTIONS ===== */
+.section{
+  padding:130px 8%;
+}
+.section h2{
+  font-size:46px;
+  letter-spacing:4px;
+  margin-bottom:70px;
+  text-shadow:0 10px 40px rgba(0,0,0,.7);
 }
 
-.prendas-title{
-text-align:center;
-margin-bottom:120px;
-opacity:0;
-transform:translateY(-60px);
-animation:titleIn 1.4s ease forwards;
-}
-
-@keyframes titleIn{
-to{opacity:1;transform:translateY(0)}
-}
-
-.prendas-title h2{
-font-size:48px;
-letter-spacing:14px;
-font-weight:800;
-text-shadow:0 0 30px rgba(255,255,255,.25);
-}
-
+/* ===== PRENDAS (PORTALES) ===== */
 .prendas-grid{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-gap:70px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(230px,1fr));
+  gap:32px;
 }
-
 .prenda{
-position:relative;
-height:300px;
-border-radius:30px;
-overflow:hidden;
-background:#111;
-opacity:0;
-transform:translateY(100px) scale(.94);
-animation:cardIn 1.4s ease forwards;
+  height:300px;
+  border-radius:22px;
+  background:linear-gradient(145deg,#111,#000);
+  display:flex;
+  align-items:flex-end;
+  padding:30px;
+  font-size:22px;
+  letter-spacing:4px;
+  cursor:pointer;
+  position:relative;
+  overflow:hidden;
+  transition:.6s;
 }
-
-.prenda:nth-child(1){animation-delay:.2s}
-.prenda:nth-child(2){animation-delay:.4s}
-.prenda:nth-child(3){animation-delay:.6s}
-.prenda:nth-child(4){animation-delay:.8s}
-.prenda:nth-child(5){animation-delay:1s}
-.prenda:nth-child(6){animation-delay:1.2s}
-
-@keyframes cardIn{
-to{opacity:1;transform:translateY(0) scale(1)}
-}
-
-.prenda img{
-width:100%;height:100%;
-object-fit:cover;
-transition:1.1s cubic-bezier(.19,1,.22,1);
-filter:brightness(.75);
-}
-
-.prenda:hover img{
-transform:scale(1.18);
-filter:brightness(.95);
-}
-
 .prenda::after{
-content:"";
-position:absolute;inset:0;
-background:linear-gradient(to top,rgba(0,0,0,.85),transparent 65%);
+  content:"";
+  position:absolute;
+  inset:0;
+  background:linear-gradient(to top,rgba(0,0,0,.7),transparent);
+}
+.prenda span{position:relative;z-index:2}
+.prenda:hover{
+  transform:translateY(-14px) scale(1.04);
+  box-shadow:0 30px 80px rgba(255,255,255,.08);
 }
 
-.prenda span{
-position:absolute;
-bottom:26px;left:26px;
-font-weight:800;
-letter-spacing:5px;
-font-size:15px;
-z-index:2;
+/* ===== EXCLUSIVOS ===== */
+.exclusive-grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:34px;
+}
+.exclusive{
+  border-radius:24px;
+  overflow:hidden;
+  transform:translateY(70px);
+  opacity:0;
+  animation:rise 1s forwards;
+}
+.exclusive:nth-child(2){animation-delay:.2s}
+.exclusive:nth-child(3){animation-delay:.4s}
+.exclusive:nth-child(4){animation-delay:.6s}
+@keyframes rise{
+  to{transform:translateY(0);opacity:1}
+}
+.exclusive img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  transition:.6s;
+}
+.exclusive:hover img{transform:scale(1.1)}
+
+/* ===== FLOATING OFFER ===== */
+.offer{
+  position:fixed;
+  bottom:36px;
+  right:36px;
+  padding:14px 26px;
+  background:#fff;
+  color:#000;
+  border-radius:50px;
+  font-weight:700;
+  letter-spacing:2px;
+  animation:float 3s infinite ease-in-out;
+}
+@keyframes float{
+  0%,100%{transform:translateY(0)}
+  50%{transform:translateY(-12px)}
 }
 
 /* ===== FOOTER ===== */
 footer{
-padding:60px 20px;
-text-align:center;
-opacity:.45;
-font-size:12px;
-letter-spacing:2px;
+  padding:40px;
+  text-align:center;
+  color:#555;
+  letter-spacing:1px;
 }
 </style>
 </head>
@@ -177,45 +203,53 @@ letter-spacing:2px;
 <body>
 
 <header>
-<div class="brand">
-<img src="logo.jpg">
-SISTEMA Z
-</div>
-
-<nav>
-<a href="index.html">Inicio</a>
-<a href="#prendas">Prendas</a>
-</nav>
+  <div class="left">
+    <img src="logo.jpg" alt="Miranda Flow">
+    <strong>BOUTIQUE</strong>
+  </div>
+  <nav>
+    <a href="#">INICIO</a>
+    <a href="#prendas">PRENDAS</a>
+    <a href="#">TIENDA</a>
+    <a href="#">CARRITO</a>
+  </nav>
 </header>
 
 <section class="hero">
-<div class="hero-content">
-<h1>MIRANDA<br>FLOW</h1>
-<p>
-No es solo ropa.<br>
-Es presencia. Es identidad.<br>
-Es entrar al ecosistema Sistema Z.
-</p>
-</div>
+  <div class="hero-content">
+    <h1>MIRANDA FLOW</h1>
+    <p>
+      Presencia que se siente.<br>
+      Estilo que no necesita explicación.
+    </p>
+    <button onclick="location.href='#prendas'">EXPLORAR PRENDAS</button>
+  </div>
 </section>
 
-<section class="prendas" id="prendas">
-<div class="prendas-title">
-<h2>PRENDAS</h2>
-</div>
-
-<div class="prendas-grid">
-<div class="prenda"><img src="relojes.jpg"><span>RELOJES</span></div>
-<div class="prenda"><img src="cadenas.jpg"><span>CADENAS</span></div>
-<div class="prenda"><img src="camisas.jpg"><span>CAMISAS</span></div>
-<div class="prenda"><img src="jeans.jpg"><span>JEANS</span></div>
-<div class="prenda"><img src="hoodies.jpg"><span>HOODIES</span></div>
-<div class="prenda"><img src="accesorios.jpg"><span>ACCESORIOS</span></div>
-</div>
+<section class="section" id="prendas">
+  <h2>PRENDAS</h2>
+  <div class="prendas-grid">
+    <div class="prenda"><span>RELOJES</span></div>
+    <div class="prenda"><span>CADENAS</span></div>
+    <div class="prenda"><span>ANILLOS</span></div>
+    <div class="prenda"><span>ACCESORIOS</span></div>
+  </div>
 </section>
+
+<section class="section">
+  <h2>EXCLUSIVOS</h2>
+  <div class="exclusive-grid">
+    <div class="exclusive"><img src="exclusive-1.jpg"></div>
+    <div class="exclusive"><img src="exclusive-2.jpg"></div>
+    <div class="exclusive"><img src="exclusive-3.jpg"></div>
+    <div class="exclusive"><img src="exclusive-4.jpg"></div>
+  </div>
+</section>
+
+<div class="offer">🎁 -20% HOY</div>
 
 <footer>
-© Miranda Flow — Sistema Z Ecosystem
+© Miranda Flow Boutique
 </footer>
 
 </body>
