--- a/index.html
+++ b/index.html
@@ -1,256 +1,510 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Miranda Flow Boutique</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Miranda Flow Boutique</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;900&display=swap" rel="stylesheet">
 
-<style>
-*{margin:0;padding:0;box-sizing:border-box}
-body{
-  background:#000;
-  color:#fff;
-  font-family:'Inter',sans-serif;
-  overflow-x:hidden;
-}
+  <style>
+    :root{
+      --bg:#000;
+      --glass: rgba(255,255,255,.06);
+      --glass2: rgba(255,255,255,.10);
+      --txt:#fff;
+      --muted: rgba(255,255,255,.65);
+      --muted2: rgba(255,255,255,.45);
+      --ring: rgba(255,255,255,.18);
+      --shadow: 0 40px 120px rgba(0,0,0,.65);
+      --radius: 26px;
+    }
 
-/* ===== HEADER ===== */
-header{
-  position:fixed;
-  top:0;left:0;
-  width:100%;
-  padding:18px 60px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  background:rgba(0,0,0,.55);
-  backdrop-filter:blur(12px);
-  z-index:1000;
-}
-header .left{
-  display:flex;
-  align-items:center;
-  gap:14px;
-}
-header img{width:36px}
-header strong{letter-spacing:2px;font-weight:700}
+    *{margin:0;padding:0;box-sizing:border-box}
+    html{scroll-behavior:smooth}
+    body{
+      font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      background: var(--bg);
+      color: var(--txt);
+      overflow-x:hidden;
+    }
 
-nav a{
-  color:#bbb;
-  margin-left:30px;
-  text-decoration:none;
-  letter-spacing:2px;
-  font-size:13px;
-}
-nav a:hover{color:#fff}
+    /* ===== Ambient background ===== */
+    .ambient{
+      position:fixed; inset:0;
+      pointer-events:none;
+      z-index:-2;
+      background:
+        radial-gradient(900px 520px at 12% 18%, rgba(0,255,170,.18), transparent 60%),
+        radial-gradient(880px 560px at 88% 24%, rgba(0,140,255,.22), transparent 60%),
+        radial-gradient(980px 620px at 60% 92%, rgba(140,255,0,.14), transparent 60%),
+        linear-gradient(to bottom, rgba(0,0,0,.2), rgba(0,0,0,.85) 35%, rgba(0,0,0,1));
+      filter:saturate(120%);
+    }
+    .vignette{
+      position:fixed; inset:-40px;
+      pointer-events:none;
+      z-index:-1;
+      background: radial-gradient(circle at 50% 35%, transparent 0 35%, rgba(0,0,0,.85) 70%);
+    }
 
-/* ===== HERO ===== */
-.hero{
-  height:100vh;
-  display:flex;
-  align-items:center;
-  padding-left:8%;
-  position:relative;
-}
-.hero::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:url('logo.jpg') center/contain no-repeat;
-  opacity:.08;
-  filter:blur(6px);
-  animation:floatLogo 20s infinite alternate ease-in-out;
-}
-@keyframes floatLogo{
-  from{transform:scale(1) translateY(0)}
-  to{transform:scale(1.08) translateY(-25px)}
-}
-.hero-content{
-  position:relative;
-  max-width:620px;
-  animation:fadeUp 1.3s ease forwards;
-}
-@keyframes fadeUp{
-  from{opacity:0;transform:translateY(40px)}
-  to{opacity:1;transform:translateY(0)}
-}
-.hero h1{
-  font-size:76px;
-  font-weight:900;
-  letter-spacing:3px;
-  text-shadow:0 20px 60px rgba(0,0,0,.8);
-}
-.hero p{
-  margin:28px 0;
-  color:#bbb;
-  font-size:18px;
-  line-height:1.6;
-}
-.hero button{
-  padding:16px 42px;
-  background:transparent;
-  border:1px solid #fff;
-  color:#fff;
-  letter-spacing:3px;
-  cursor:pointer;
-  transition:.35s;
-}
-.hero button:hover{
-  background:#fff;
-  color:#000;
-}
+    /* ===== Top bar ===== */
+    header{
+      position:fixed; top:0; left:0; right:0;
+      padding:16px 22px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      background:rgba(0,0,0,.55);
+      backdrop-filter: blur(14px);
+      border-bottom: 1px solid rgba(255,255,255,.06);
+      z-index:1000;
+    }
 
-/* ===== SECTIONS ===== */
-.section{
-  padding:130px 8%;
-}
-.section h2{
-  font-size:46px;
-  letter-spacing:4px;
-  margin-bottom:70px;
-  text-shadow:0 10px 40px rgba(0,0,0,.7);
-}
+    .brand{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      min-width: 160px;
+    }
+    .brand img{
+      width:34px; height:34px;
+      border-radius:10px;
+      box-shadow: 0 12px 40px rgba(255,255,255,.08);
+      transform: translateZ(0);
+    }
+    .brand .name{
+      letter-spacing:3px;
+      font-weight:800;
+      font-size:14px;
+      opacity:.95;
+    }
+    .brand .sub{
+      display:block;
+      font-size:11px;
+      letter-spacing:4px;
+      color:var(--muted2);
+      margin-top:2px;
+    }
 
-/* ===== PRENDAS (PORTALES) ===== */
-.prendas-grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(230px,1fr));
-  gap:32px;
-}
-.prenda{
-  height:300px;
-  border-radius:22px;
-  background:linear-gradient(145deg,#111,#000);
-  display:flex;
-  align-items:flex-end;
-  padding:30px;
-  font-size:22px;
-  letter-spacing:4px;
-  cursor:pointer;
-  position:relative;
-  overflow:hidden;
-  transition:.6s;
-}
-.prenda::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:linear-gradient(to top,rgba(0,0,0,.7),transparent);
-}
-.prenda span{position:relative;z-index:2}
-.prenda:hover{
-  transform:translateY(-14px) scale(1.04);
-  box-shadow:0 30px 80px rgba(255,255,255,.08);
-}
+    nav{
+      display:flex;
+      align-items:center;
+      gap:18px;
+    }
+    nav a{
+      text-decoration:none;
+      color:var(--muted);
+      font-size:12px;
+      letter-spacing:3px;
+      padding:10px 12px;
+      border-radius:999px;
+      transition:.25s;
+    }
+    nav a:hover{
+      color:#fff;
+      background: rgba(255,255,255,.06);
+    }
 
-/* ===== EXCLUSIVOS ===== */
-.exclusive-grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:34px;
-}
-.exclusive{
-  border-radius:24px;
-  overflow:hidden;
-  transform:translateY(70px);
-  opacity:0;
-  animation:rise 1s forwards;
-}
-.exclusive:nth-child(2){animation-delay:.2s}
-.exclusive:nth-child(3){animation-delay:.4s}
-.exclusive:nth-child(4){animation-delay:.6s}
-@keyframes rise{
-  to{transform:translateY(0);opacity:1}
-}
-.exclusive img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  transition:.6s;
-}
-.exclusive:hover img{transform:scale(1.1)}
+    /* ===== Hero ===== */
+    .hero{
+      min-height: 92vh;
+      padding: 110px 8% 60px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      position:relative;
+    }
 
-/* ===== FLOATING OFFER ===== */
-.offer{
-  position:fixed;
-  bottom:36px;
-  right:36px;
-  padding:14px 26px;
-  background:#fff;
-  color:#000;
-  border-radius:50px;
-  font-weight:700;
-  letter-spacing:2px;
-  animation:float 3s infinite ease-in-out;
-}
-@keyframes float{
-  0%,100%{transform:translateY(0)}
-  50%{transform:translateY(-12px)}
-}
+    /* BIG LOGO BACK */
+    .logo-back{
+      position:absolute;
+      inset:0;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      pointer-events:none;
+      opacity:.20;
+      filter: blur(0.2px);
+    }
+    .logo-back img{
+      width:min(980px, 92vw);
+      opacity:.22;
+      transform: rotate(-4deg) scale(1.06);
+      filter: grayscale(100%) contrast(120%) brightness(120%);
+      mix-blend-mode: screen;
+      animation: drift 7s ease-in-out infinite;
+    }
+    @keyframes drift{
+      0%,100%{ transform: translateY(0) rotate(-4deg) scale(1.06); opacity:.22;}
+      50%{ transform: translateY(-10px) rotate(-3deg) scale(1.08); opacity:.26;}
+    }
 
-/* ===== FOOTER ===== */
-footer{
-  padding:40px;
-  text-align:center;
-  color:#555;
-  letter-spacing:1px;
-}
-</style>
+    .hero-card{
+      width: min(980px, 100%);
+      border-radius: var(--radius);
+      background: linear-gradient(180deg, rgba(255,255,255,.07), rgba(255,255,255,.03));
+      border: 1px solid rgba(255,255,255,.08);
+      box-shadow: var(--shadow);
+      padding: 44px 34px;
+      position:relative;
+      overflow:hidden;
+    }
+    .hero-card:before{
+      content:"";
+      position:absolute;
+      inset:-2px;
+      background:
+        radial-gradient(600px 220px at 10% 0%, rgba(255,255,255,.12), transparent 60%),
+        radial-gradient(720px 280px at 90% 10%, rgba(255,255,255,.10), transparent 60%);
+      opacity:.65;
+      pointer-events:none;
+    }
+
+    .kicker{
+      letter-spacing:4px;
+      color:var(--muted);
+      font-weight:600;
+      font-size:12px;
+      margin-bottom:14px;
+      position:relative;
+      z-index:2;
+    }
+    h1{
+      font-size: clamp(46px, 7vw, 88px);
+      line-height: .95;
+      font-weight: 900;
+      letter-spacing: 1px;
+      position:relative;
+      z-index:2;
+      text-shadow: 0 18px 60px rgba(0,0,0,.65);
+    }
+    .tag{
+      margin-top:16px;
+      font-size: clamp(16px, 2.2vw, 20px);
+      color: rgba(255,255,255,.78);
+      line-height: 1.5;
+      max-width: 640px;
+      position:relative;
+      z-index:2;
+    }
+
+    .cta{
+      display:flex;
+      gap:14px;
+      flex-wrap:wrap;
+      margin-top: 26px;
+      position:relative;
+      z-index:2;
+    }
+    .btn{
+      border: 1px solid rgba(255,255,255,.20);
+      background: rgba(255,255,255,.06);
+      color:#fff;
+      padding: 14px 18px;
+      border-radius: 14px;
+      letter-spacing:3px;
+      font-size: 12px;
+      font-weight:800;
+      text-decoration:none;
+      display:inline-flex;
+      align-items:center;
+      gap:10px;
+      transition: .25s;
+      user-select:none;
+    }
+    .btn:hover{
+      background: rgba(255,255,255,.12);
+      transform: translateY(-2px);
+    }
+    .btn.primary{
+      background:#fff;
+      color:#000;
+      border-color: rgba(255,255,255,.45);
+    }
+    .btn.primary:hover{
+      background: rgba(255,255,255,.92);
+    }
+
+    /* ===== Floating pills ===== */
+    .pill{
+      position:fixed;
+      right: 18px;
+      display:flex;
+      align-items:center;
+      gap:10px;
+      padding: 12px 16px;
+      border-radius: 999px;
+      background:#fff;
+      color:#000;
+      font-weight:900;
+      letter-spacing:2px;
+      font-size:12px;
+      box-shadow: 0 22px 80px rgba(0,0,0,.55);
+      z-index:999;
+      transform: translateZ(0);
+      animation: float 3.2s ease-in-out infinite;
+      cursor:pointer;
+      user-select:none;
+      text-decoration:none;
+    }
+    .pill small{
+      font-weight:900;
+      opacity:.9;
+    }
+    @keyframes float{
+      0%,100%{ transform: translateY(0); }
+      50%{ transform: translateY(-10px); }
+    }
+    .pill.offer{ bottom: 22px; }
+    .pill.portal{ bottom: 78px; background: rgba(255,255,255,.10); color:#fff; border:1px solid rgba(255,255,255,.18); backdrop-filter: blur(12px); }
+    .pill.portal:hover{ background: rgba(255,255,255,.16); }
+
+    /* ===== Exclusive section ===== */
+    .section{
+      padding: 18px 8% 100px;
+    }
+    .sec-head{
+      display:flex;
+      align-items:flex-end;
+      justify-content:space-between;
+      gap:18px;
+      margin-bottom: 22px;
+    }
+    .sec-title{
+      font-size: 34px;
+      letter-spacing: 8px;
+      font-weight: 900;
+    }
+    .sec-sub{
+      color: var(--muted2);
+      letter-spacing:3px;
+      font-size: 12px;
+      max-width: 420px;
+      text-align:right;
+      line-height:1.4;
+    }
+
+    .exclusive-grid{
+      display:grid;
+      grid-template-columns: repeat(12, 1fr);
+      gap: 18px;
+    }
+
+    .ex-card{
+      grid-column: span 6;
+      min-height: 280px;
+      border-radius: 24px;
+      overflow:hidden;
+      border: 1px solid rgba(255,255,255,.10);
+      background: rgba(255,255,255,.04);
+      position:relative;
+      box-shadow: 0 30px 90px rgba(0,0,0,.55);
+      transform: translateY(24px);
+      opacity: 0;
+      filter: blur(6px);
+      transition: .9s cubic-bezier(.2,.9,.2,1);
+    }
+    .ex-card.show{
+      transform: translateY(0);
+      opacity: 1;
+      filter: blur(0);
+    }
+    .ex-card img{
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      transform: scale(1.06);
+      transition: .75s cubic-bezier(.2,.9,.2,1);
+      filter: saturate(1.05) contrast(1.08);
+    }
+    .ex-card:hover img{
+      transform: scale(1.12);
+    }
+    .ex-card:after{
+      content:"";
+      position:absolute;
+      inset:0;
+      background:
+        linear-gradient(to top, rgba(0,0,0,.78), rgba(0,0,0,.0) 58%),
+        radial-gradient(500px 260px at 30% 0%, rgba(255,255,255,.10), transparent 60%);
+      pointer-events:none;
+    }
+    .ex-label{
+      position:absolute;
+      left:16px;
+      bottom:14px;
+      z-index:2;
+      display:flex;
+      flex-direction:column;
+      gap:6px;
+    }
+    .ex-label b{
+      font-size: 13px;
+      letter-spacing: 4px;
+    }
+    .ex-label span{
+      font-size: 12px;
+      color: rgba(255,255,255,.72);
+      letter-spacing: 2px;
+    }
+
+    .ex-cta{
+      margin-top: 18px;
+      display:flex;
+      gap:12px;
+      flex-wrap:wrap;
+    }
+
+    /* ===== Footer ===== */
+    footer{
+      padding: 22px 8% 60px;
+      color: rgba(255,255,255,.35);
+      letter-spacing:2px;
+      font-size: 12px;
+      text-align:center;
+    }
+
+    /* ===== Responsive ===== */
+    @media (max-width: 820px){
+      header{ padding:14px 14px; }
+      nav a{ padding:10px 10px; margin-left:0; }
+      .hero{ padding: 104px 6% 40px; }
+      .hero-card{ padding: 34px 20px; }
+      .sec-sub{ text-align:left; max-width: 520px; }
+      .sec-head{ align-items:flex-start; flex-direction:column; }
+      .ex-card{ grid-column: span 12; min-height: 260px; }
+    }
+  </style>
 </head>
 
 <body>
+  <div class="ambient"></div>
+  <div class="vignette"></div>
 
-<header>
-  <div class="left">
-    <img src="logo.jpg" alt="Miranda Flow">
-    <strong>BOUTIQUE</strong>
+  <header>
+    <div class="brand">
+      <img src="logo.jpg" alt="Miranda Flow Logo">
+      <div>
+        <div class="name">BOUTIQUE</div>
+        <span class="sub">MIRANDA FLOW</span>
+      </div>
+    </div>
+
+    <nav>
+      <a href="#top">INICIO</a>
+      <a href="#exclusive">EXCLUSIVE</a>
+      <a href="producto.html">TIENDA</a>
+      <a href="carrito.html">CARRITO</a>
+    </nav>
+  </header>
+
+  <!-- Floating: portal Prendas + offer -->
+  <a class="pill portal" href="prendas.html" title="Entrar al ecosistema de Prendas">
+    ✨ <small>PRÉNDAS</small>
+  </a>
+  <div class="pill offer" id="offerPill" title="Oferta">
+    🎁 <small>-20% HOY</small>
   </div>
-  <nav>
-    <a href="#">INICIO</a>
-    <a href="#prendas">PRENDAS</a>
-    <a href="#">TIENDA</a>
-    <a href="#">CARRITO</a>
-  </nav>
-</header>
 
-<section class="hero">
-  <div class="hero-content">
-    <h1>MIRANDA FLOW</h1>
-    <p>
-      Presencia que se siente.<br>
-      Estilo que no necesita explicación.
-    </p>
-    <button onclick="location.href='#prendas'">EXPLORAR PRENDAS</button>
-  </div>
-</section>
+  <main id="top">
+    <section class="hero">
+      <div class="logo-back">
+        <img src="logo.jpg" alt="">
+      </div>
 
-<section class="section" id="prendas">
-  <h2>PRENDAS</h2>
-  <div class="prendas-grid">
-    <div class="prenda"><span>RELOJES</span></div>
-    <div class="prenda"><span>CADENAS</span></div>
-    <div class="prenda"><span>ANILLOS</span></div>
-    <div class="prenda"><span>ACCESORIOS</span></div>
-  </div>
-</section>
+      <div class="hero-card">
+        <div class="kicker">BOUTIQUE / PRESENCIA / NIVEL</div>
+        <h1>MIRANDA<br>FLOW</h1>
+        <p class="tag">
+          Prendas con presencia. Estilo que se impone sin hablar.
+          <br>Esto no es “una tienda”: es una entrada a un ecosistema.
+        </p>
 
-<section class="section">
-  <h2>EXCLUSIVOS</h2>
-  <div class="exclusive-grid">
-    <div class="exclusive"><img src="exclusive-1.jpg"></div>
-    <div class="exclusive"><img src="exclusive-2.jpg"></div>
-    <div class="exclusive"><img src="exclusive-3.jpg"></div>
-    <div class="exclusive"><img src="exclusive-4.jpg"></div>
-  </div>
-</section>
+        <div class="cta">
+          <a class="btn primary" href="prendas.html">ENTRAR A PRÉNDAS →</a>
+          <a class="btn" href="#exclusive">VER EXCLUSIVE ↓</a>
+          <a class="btn" href="producto.html">ABRIR TIENDA →</a>
+        </div>
+      </div>
+    </section>
 
-<div class="offer">🎁 -20% HOY</div>
+    <section class="section" id="exclusive">
+      <div class="sec-head">
+        <div class="sec-title">EXCLUSIVE</div>
+        <div class="sec-sub">
+          Drop visual de muestra.  
+          Fotos reales o demo, pero con presencia.
+        </div>
+      </div>
 
-<footer>
-© Miranda Flow Boutique
-</footer>
+      <div class="exclusive-grid">
+        <a class="ex-card" href="producto.html" aria-label="Exclusive 1">
+          <img src="exclusive-1.jpg" alt="Exclusive 1">
+          <div class="ex-label">
+            <b>EXCLUSIVE 01</b>
+            <span>Edición limitada</span>
+          </div>
+        </a>
 
+        <a class="ex-card" href="producto.html" aria-label="Exclusive 2">
+          <img src="exclusive-2.jpg" alt="Exclusive 2">
+          <div class="ex-label">
+            <b>EXCLUSIVE 02</b>
+            <span>Selección premium</span>
+          </div>
+        </a>
+
+        <a class="ex-card" href="producto.html" aria-label="Exclusive 3">
+          <img src="exclusive-3.jpg" alt="Exclusive 3">
+          <div class="ex-label">
+            <b>EXCLUSIVE 03</b>
+            <span>Drop del día</span>
+          </div>
+        </a>
+
+        <a class="ex-card" href="producto.html" aria-label="Exclusive 4">
+          <img src="exclusive-4.jpg" alt="Exclusive 4">
+          <div class="ex-label">
+            <b>EXCLUSIVE 04</b>
+            <span>Top selection</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="ex-cta">
+        <a class="btn primary" href="prendas.html">IR AL PORTAL PRÉNDAS →</a>
+        <a class="btn" href="producto.html">ENTRAR A TIENDA →</a>
+      </div>
+    </section>
+
+    <footer>
+      © 2025 Miranda Flow Boutique. Todos los derechos reservados.
+    </footer>
+  </main>
+
+  <script>
+    // Animación PRO cuando entran las cards (Exclusive)
+    const cards = document.querySelectorAll('.ex-card');
+    const io = new IntersectionObserver((entries)=>{
+      entries.forEach(e=>{
+        if(e.isIntersecting){
+          e.target.classList.add('show');
+          io.unobserve(e.target);
+        }
+      });
+    }, { threshold: 0.18 });
+
+    cards.forEach(c => io.observe(c));
+
+    // Pill oferta: micro feedback al tocar
+    const offer = document.getElementById('offerPill');
+    offer.addEventListener('click', ()=>{
+      offer.style.transform = "scale(0.95)";
+      setTimeout(()=> offer.style.transform = "", 160);
+    });
+  </script>
 </body>
 </html>
