--- a/prendas.html
+++ b/prendas.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Prendas | Miranda Flow</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;900&display=swap" rel="stylesheet">
@@ -10,110 +10,120 @@
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 body{
+  font-family:'Inter',sans-serif;
   background:#000;
   color:#fff;
-  font-family:'Inter',sans-serif;
 }
 
 /* HEADER */
 header{
   position:fixed;
-  top:0;left:0;
-  width:100%;
-  padding:18px 60px;
+  top:0;left:0;right:0;
+  height:70px;
+  padding:0 22px;
   display:flex;
   justify-content:space-between;
   align-items:center;
   background:rgba(0,0,0,.6);
-  backdrop-filter:blur(12px);
+  backdrop-filter:blur(14px);
+  border-bottom:1px solid rgba(255,255,255,.08);
   z-index:1000;
 }
-header .left{
+.brand{
   display:flex;
   align-items:center;
-  gap:14px;
+  gap:12px;
 }
-header img{width:34px}
-header strong{letter-spacing:2px}
-
+.brand img{
+  width:36px;
+  border-radius:8px;
+}
+.brand .text{
+  font-size:12px;
+  letter-spacing:3px;
+}
+.brand .text b{
+  display:block;
+  font-size:14px;
+  letter-spacing:4px;
+}
 nav a{
-  color:#aaa;
-  margin-left:30px;
+  margin-left:22px;
   text-decoration:none;
-  letter-spacing:2px;
-  font-size:13px;
+  color:rgba(255,255,255,.7);
+  font-size:12px;
+  letter-spacing:3px;
 }
 nav a:hover{color:#fff}
 
 /* HERO */
 .hero{
-  height:55vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
+  padding:120px 8% 60px;
 }
 .hero h1{
-  font-size:64px;
-  letter-spacing:8px;
-  font-weight:900;
-  opacity:.95;
+  font-size:clamp(42px,6vw,80px);
+  letter-spacing:10px;
+}
+.hero p{
+  margin-top:10px;
+  color:rgba(255,255,255,.65);
+  font-size:18px;
+  max-width:600px;
 }
 
 /* GRID */
-.section{
-  padding:100px 8%;
-}
 .grid{
+  padding:40px 8% 80px;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:40px;
+  gap:26px;
 }
-.card{
-  height:320px;
-  border-radius:26px;
-  background:linear-gradient(145deg,#0c0c0c,#000);
-  display:flex;
-  align-items:flex-end;
-  padding:30px;
-  letter-spacing:4px;
-  font-size:22px;
-  cursor:pointer;
+.block{
   position:relative;
+  height:360px;
+  border-radius:28px;
   overflow:hidden;
-  transition:.6s;
+  background:#111;
+  border:1px solid rgba(255,255,255,.1);
+  cursor:pointer;
+  transform:translateY(30px);
+  opacity:0;
+  filter:blur(6px);
+  transition:.8s ease;
 }
-.card::before{
+.block.show{
+  transform:none;
+  opacity:1;
+  filter:none;
+}
+.block img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  opacity:.85;
+}
+.block::after{
   content:"";
   position:absolute;
   inset:0;
-  background:radial-gradient(circle at top,rgba(255,255,255,.12),transparent 70%);
-  opacity:0;
-  transition:.6s;
+  background:linear-gradient(to top,rgba(0,0,0,.85),transparent);
 }
-.card:hover::before{opacity:1}
-.card:hover{
-  transform:translateY(-18px) scale(1.05);
-  box-shadow:0 40px 120px rgba(255,255,255,.08);
+.block span{
+  position:absolute;
+  bottom:22px;
+  left:22px;
+  font-size:18px;
+  letter-spacing:6px;
+  font-weight:800;
 }
-.card span{z-index:2}
 
-/* FLOAT OFFER */
-.offer{
-  position:fixed;
-  bottom:34px;
-  right:34px;
-  padding:14px 28px;
-  background:#fff;
-  color:#000;
-  border-radius:50px;
-  font-weight:700;
+/* FOOTER */
+footer{
+  padding:40px;
+  text-align:center;
+  color:rgba(255,255,255,.35);
+  font-size:12px;
   letter-spacing:2px;
-  animation:float 3s infinite ease-in-out;
-}
-@keyframes float{
-  0%,100%{transform:translateY(0)}
-  50%{transform:translateY(-12px)}
 }
 </style>
 </head>
@@ -121,32 +131,51 @@ nav a:hover{color:#fff}
 <body>
 
 <header>
-  <div class="left">
+  <div class="brand">
     <img src="logo.jpg">
-    <strong>BOUTIQUE</strong>
+    <div class="text">
+      <b>BOUTIQUE</b>
+      MIRANDA FLOW
+    </div>
   </div>
   <nav>
     <a href="index.html">INICIO</a>
-    <a href="prendas.html">PRENDAS</a>
-    <a href="#">TIENDA</a>
-    <a href="#">CARRITO</a>
+    <a href="producto.html">TIENDA</a>
+    <a href="carrito.html">CARRITO</a>
   </nav>
 </header>
 
 <section class="hero">
-  <h1>PRENDAS</h1>
+  <h1>PRÉNDAS</h1>
+  <p>
+    Categorías que abren universos.  
+    Cada bloque es una puerta a una colección.
+  </p>
 </section>
 
-<section class="section">
-  <div class="grid">
-    <div class="card"><span>RELOJES</span></div>
-    <div class="card"><span>CADENAS</span></div>
-    <div class="card"><span>ANILLOS</span></div>
-    <div class="card"><span>ACCESORIOS</span></div>
-  </div>
+<section class="grid">
+  <div class="block"><img src="exclusive-1.jpg"><span>RELOJES</span></div>
+  <div class="block"><img src="exclusive-2.jpg"><span>CADENAS</span></div>
+  <div class="block"><img src="exclusive-3.jpg"><span>ANILLOS</span></div>
+  <div class="block"><img src="exclusive-4.jpg"><span>ACCESORIOS</span></div>
 </section>
 
-<div class="offer">🎁 -20% HOY</div>
+<footer>
+  © 2025 Miranda Flow Boutique
+</footer>
+
+<script>
+const blocks=document.querySelectorAll('.block');
+const io=new IntersectionObserver(e=>{
+  e.forEach(x=>{
+    if(x.isIntersecting){
+      x.target.classList.add('show');
+      io.unobserve(x.target);
+    }
+  })
+},{threshold:.2});
+blocks.forEach(b=>io.observe(b));
+</script>
 
 </body>
 </html>
