--- a/producto.html
+++ b/producto.html
@@ -1,429 +1,140 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Producto · Miranda Flow Boutique</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Producto | Miranda Flow Boutique</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
-  <style>
-    /* ================= RESET ================= */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Montserrat', sans-serif;
-      background: #060606;
-      color: #fff;
-      overflow-x: hidden;
-    }
-    a { color: inherit; text-decoration: none; }
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  font-family:Inter,system-ui;
+  background:#000;
+  color:#fff;
+}
 
-    /* ================= TOP BAR ================= */
-    .topbar {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      padding: 16px 6%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: rgba(0,0,0,.65);
-      backdrop-filter: blur(12px);
-      z-index: 1000;
-    }
+/* Background glow */
+.bg{
+  position:fixed;
+  inset:-30%;
+  background:
+    radial-gradient(700px 500px at 20% 30%, #0f3b2e55, transparent),
+    radial-gradient(600px 500px at 80% 70%, #1a1a1a, transparent);
+  filter:blur(60px);
+  z-index:-1;
+}
 
-    .leftbar {
-      display: flex;
-      align-items: center;
-      gap: 14px;
-    }
+/* Header */
+header{
+  display:flex;
+  align-items:center;
+  padding:20px 24px;
+}
 
-    .back {
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      font-weight: 800;
-      letter-spacing: 1px;
-      opacity: .8;
-      transition: opacity .25s, transform .25s;
-    }
-    .back:hover { opacity: 1; transform: translateX(-2px); }
+.back{
+  font-size:26px;
+  text-decoration:none;
+  color:#fff;
+  opacity:.7;
+  transition:.3s;
+}
+.back:hover{opacity:1;transform:translateX(-4px)}
 
-    .logo img {
-      height: 34px;
-      filter: drop-shadow(0 4px 12px rgba(0,0,0,.65));
-      opacity: .95;
-    }
+.brand{
+  margin-left:16px;
+  font-weight:700;
+  letter-spacing:.12em;
+}
 
-    .lang {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    .lang button {
-      border: 0;
-      background: transparent;
-      color: #fff;
-      font-weight: 900;
-      letter-spacing: 1px;
-      opacity: .45;
-      cursor: pointer;
-      transition: opacity .2s, transform .2s;
-      font-size: 14px;
-    }
-    .lang button.active { opacity: 1; transform: translateY(-1px); }
+/* Product */
+.product{
+  max-width:1100px;
+  margin:40px auto;
+  display:grid;
+  grid-template-columns:1.1fr 1fr;
+  gap:60px;
+  padding:0 24px;
+  animation:fadeUp 1s ease forwards;
+}
 
-    /* ================= PAGE ================= */
-    .page {
-      padding: 120px 6% 90px;
-      min-height: 100vh;
-      background:
-        radial-gradient(700px 420px at 40% 10%, rgba(255,0,150,.18), transparent 60%),
-        radial-gradient(650px 420px at 80% 90%, rgba(0,140,255,.18), transparent 60%),
-        #060606;
-    }
+.product img{
+  width:100%;
+  border-radius:22px;
+  box-shadow:0 30px 80px #000;
+}
 
-    /* ================= PRODUCT LAYOUT ================= */
-    .wrap {
-      max-width: 1180px;
-      margin: 0 auto;
-      display: grid;
-      grid-template-columns: 1.1fr .9fr;
-      gap: 54px;
-      align-items: start;
-    }
+.info h1{
+  font-size:clamp(32px,5vw,56px);
+  margin-bottom:16px;
+}
 
-    .media {
-      position: relative;
-      border-radius: 28px;
-      overflow: hidden;
-      background: rgba(18,18,18,.85);
-      border: 1px solid rgba(255,255,255,.08);
-      box-shadow: 0 40px 90px rgba(0,0,0,.55);
-      transform: translateY(10px);
-      opacity: 0;
-      transition: opacity .8s, transform .8s;
-    }
-    .media.show { opacity: 1; transform: translateY(0); }
+.price{
+  font-size:24px;
+  opacity:.8;
+  margin-bottom:30px;
+}
 
-    .media img {
-      width: 100%;
-      height: 520px;
-      object-fit: cover;
-      display: block;
-    }
+.desc{
+  font-size:15px;
+  line-height:1.7;
+  opacity:.85;
+  margin-bottom:40px;
+}
 
-    .badge {
-      position: absolute;
-      top: 18px;
-      left: 18px;
-      padding: 10px 14px;
-      border-radius: 999px;
-      font-size: 12px;
-      font-weight: 900;
-      letter-spacing: 2px;
-      background: rgba(0,0,0,.6);
-      border: 1px solid rgba(255,255,255,.12);
-      backdrop-filter: blur(10px);
-      text-transform: uppercase;
-    }
+.btn{
+  display:inline-block;
+  padding:16px 36px;
+  border-radius:999px;
+  border:1px solid #fff;
+  color:#fff;
+  text-decoration:none;
+  letter-spacing:.12em;
+  transition:.35s;
+}
+.btn:hover{
+  background:#fff;
+  color:#000;
+}
 
-    .info {
-      padding-top: 4px;
-      opacity: 0;
-      transform: translateY(10px);
-      transition: opacity .8s .08s, transform .8s .08s;
-    }
-    .info.show { opacity: 1; transform: translateY(0); }
+/* Anim */
+@keyframes fadeUp{
+  from{opacity:0;transform:translateY(30px)}
+  to{opacity:1;transform:none}
+}
 
-    .kicker {
-      font-size: 12px;
-      letter-spacing: 6px;
-      opacity: .7;
-      text-transform: uppercase;
-      font-weight: 700;
-    }
-
-    h1 {
-      margin-top: 14px;
-      font-size: clamp(34px, 4.3vw, 56px);
-      font-weight: 900;
-      line-height: 1.05;
-      text-transform: uppercase;
-      text-shadow: 0 14px 40px rgba(0,0,0,.75);
-    }
-
-    .sub {
-      margin-top: 18px;
-      max-width: 520px;
-      font-size: 16px;
-      opacity: .86;
-      line-height: 1.7;
-    }
-
-    .priceRow {
-      margin-top: 24px;
-      display: flex;
-      align-items: baseline;
-      gap: 14px;
-    }
-    .price {
-      font-size: 26px;
-      font-weight: 900;
-      letter-spacing: 1px;
-    }
-    .smallNote {
-      font-size: 13px;
-      opacity: .65;
-    }
-
-    .actions {
-      margin-top: 28px;
-      display: flex;
-      gap: 14px;
-      flex-wrap: wrap;
-    }
-
-    .btn {
-      border: 0;
-      cursor: pointer;
-      font-weight: 900;
-      letter-spacing: 1px;
-      padding: 14px 18px;
-      border-radius: 16px;
-      transition: transform .25s, box-shadow .25s, opacity .25s;
-    }
-    .btn:active { transform: scale(.98); }
-
-    .btn-primary {
-      background: #0b0b0b;
-      color: #fff;
-      border: 1px solid rgba(255,255,255,.18);
-      box-shadow: 0 18px 50px rgba(0,0,0,.55);
-    }
-    .btn-primary:hover { box-shadow: 0 26px 70px rgba(0,0,0,.7); }
-
-    .btn-ghost {
-      background: transparent;
-      color: #fff;
-      border: 1px solid rgba(255,255,255,.14);
-      opacity: .9;
-    }
-    .btn-ghost:hover { opacity: 1; }
-
-    /* ================= TRUST / DETAILS ================= */
-    .details {
-      margin-top: 28px;
-      border-top: 1px solid rgba(255,255,255,.08);
-      padding-top: 22px;
-      display: grid;
-      gap: 10px;
-      max-width: 560px;
-      font-size: 14px;
-      opacity: .85;
-    }
-
-    .details div {
-      display: flex;
-      justify-content: space-between;
-      gap: 18px;
-      padding: 10px 0;
-      border-bottom: 1px solid rgba(255,255,255,.06);
-    }
-    .details span { opacity: .7; }
-
-    .toast {
-      position: fixed;
-      left: 50%;
-      bottom: 20px;
-      transform: translateX(-50%) translateY(20px);
-      background: rgba(0,0,0,.75);
-      border: 1px solid rgba(255,255,255,.14);
-      backdrop-filter: blur(12px);
-      border-radius: 18px;
-      padding: 14px 16px;
-      font-weight: 800;
-      letter-spacing: 1px;
-      opacity: 0;
-      transition: opacity .35s, transform .35s;
-      z-index: 9999;
-    }
-    .toast.show { opacity: 1; transform: translateX(-50%) translateY(0); }
-
-    /* ================= MOBILE ================= */
-    @media (max-width: 980px) {
-      .wrap { grid-template-columns: 1fr; }
-      .media img { height: 420px; }
-    }
-    @media (max-width: 520px) {
-      .page { padding-top: 108px; }
-      .logo img { height: 30px; }
-      h1 { text-shadow: 0 10px 28px rgba(0,0,0,.8); }
-    }
-  </style>
+/* Responsive */
+@media(max-width:900px){
+  .product{grid-template-columns:1fr}
+}
+</style>
 </head>
 
 <body>
+<div class="bg"></div>
 
-  <!-- TOP BAR -->
-  <div class="topbar">
-    <div class="leftbar">
-      <a class="back" href="tienda.html">
-        <span aria-hidden="true">←</span>
-        <span data-es="Tienda" data-en="Store">Tienda</span>
-      </a>
-      <div class="logo">
-        <img src="logo.jpg" alt="Miranda Flow Boutique">
-      </div>
+<header>
+  <a href="tienda.html" class="back">←</a>
+  <div class="brand">BOUTIQUE · MIRANDA FLOW</div>
+</header>
+
+<section class="product">
+  <img src="hoodie.jpg" alt="Producto">
+
+  <div class="info">
+    <h1>Emotions Never Die Hoodie</h1>
+    <div class="price">$120 USD</div>
+
+    <div class="desc">
+      Pieza de muestra del ecosistema Miranda Flow.  
+      Corte sólido, presencia visual, sin exagerar.  
+      Esto no es fast fashion. Es identidad.
     </div>
 
-    <div class="lang">
-      <button class="active" data-lang="es">ES</button>
-      <button data-lang="en">EN</button>
-    </div>
+    <a href="#" class="btn">AGREGAR AL CARRITO</a>
   </div>
-
-  <main class="page">
-    <div class="wrap">
-
-      <!-- IMAGE -->
-      <section class="media" id="media">
-        <div class="badge" data-es="Edición Limitada" data-en="Limited Edition">Edición Limitada</div>
-
-        <!-- Cambia esto por tu foto real del producto cuando la tengas -->
-        <img src="producto-1.jpg" alt="Producto">
-      </section>
-
-      <!-- INFO -->
-      <section class="info" id="info">
-        <div class="kicker" data-es="Boutique Editorial" data-en="Editorial Boutique">Boutique Editorial</div>
-
-        <h1 id="pName"
-          data-es="Vestido Ébano"
-          data-en="Ebony Dress">Vestido Ébano</h1>
-
-        <p class="sub" id="pDesc"
-          data-es="Diseñado para dominar con elegancia. Corte impecable, presencia total y una vibra que no se negocia."
-          data-en="Designed to lead with elegance. Impeccable cut, full presence, and a vibe that never negotiates.">
-          Diseñado para dominar con elegancia. Corte impecable, presencia total y una vibra que no se negocia.
-        </p>
-
-        <div class="priceRow">
-          <div class="price" id="pPrice">$120</div>
-          <div class="smallNote" data-es="Impuestos/Envío varía según zona" data-en="Tax/Shipping varies by location">
-            Impuestos/Envío varía según zona
-          </div>
-        </div>
-
-        <div class="actions">
-          <button class="btn btn-primary" id="addToCart"
-            data-es="Agregar al carrito"
-            data-en="Add to cart">Agregar al carrito</button>
-
-          <a class="btn btn-ghost" id="buyNow" href="carrito.html"
-            data-es="Comprar ahora"
-            data-en="Buy now">Comprar ahora</a>
-        </div>
-
-        <div class="details">
-          <div>
-            <strong data-es="Material" data-en="Material">Material</strong>
-            <span data-es="Satín premium" data-en="Premium satin">Satín premium</span>
-          </div>
-          <div>
-            <strong data-es="Tallas" data-en="Sizes">Tallas</strong>
-            <span data-es="XS · S · M · L" data-en="XS · S · M · L">XS · S · M · L</span>
-          </div>
-          <div>
-            <strong data-es="Garantía" data-en="Guarantee">Garantía</strong>
-            <span data-es="Cambio por defecto (7 días)" data-en="Defect exchange (7 days)">Cambio por defecto (7 días)</span>
-          </div>
-          <div>
-            <strong data-es="Entrega" data-en="Delivery">Entrega</strong>
-            <span data-es="2–5 días hábiles" data-en="2–5 business days">2–5 días hábiles</span>
-          </div>
-        </div>
-
-      </section>
-
-    </div>
-  </main>
-
-  <div class="toast" id="toast"
-    data-es="Agregado al carrito ✅"
-    data-en="Added to cart ✅">Agregado al carrito ✅</div>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      // Entrance animations
-      const media = document.getElementById("media");
-      const info  = document.getElementById("info");
-      requestAnimationFrame(() => {
-        media.classList.add("show");
-        info.classList.add("show");
-      });
-
-      // Language
-      const buttons = document.querySelectorAll(".lang button");
-      const translatables = document.querySelectorAll("[data-es][data-en]");
-
-      function setLang(lang) {
-        buttons.forEach(b => b.classList.toggle("active", b.dataset.lang === lang));
-        translatables.forEach(el => el.textContent = el.dataset[lang]);
-        document.documentElement.lang = lang;
-      }
-
-      buttons.forEach(btn => btn.addEventListener("click", () => setLang(btn.dataset.lang)));
-      setLang("es");
-
-      // Cart logic (localStorage)
-      const addToCartBtn = document.getElementById("addToCart");
-      const toast = document.getElementById("toast");
-
-      function showToast() {
-        toast.textContent = toast.dataset[document.documentElement.lang] || toast.textContent;
-        toast.classList.add("show");
-        setTimeout(() => toast.classList.remove("show"), 1400);
-      }
-
-      function getCart() {
-        try { return JSON.parse(localStorage.getItem("mf_cart")) || []; }
-        catch { return []; }
-      }
-
-      function setCart(cart) {
-        localStorage.setItem("mf_cart", JSON.stringify(cart));
-      }
-
-      addToCartBtn.addEventListener("click", () => {
-        const product = {
-          id: "mf-vestido-ebano",
-          name: document.getElementById("pName").textContent.trim(),
-          price: 120,
-          image: "producto-1.jpg",
-          qty: 1
-        };
-
-        const cart = getCart();
-        const found = cart.find(i => i.id === product.id);
-        if (found) found.qty += 1;
-        else cart.push(product);
-
-        setCart(cart);
-        showToast();
-      });
-
-      // Tip: evita zoom doble tap (iOS) - sin romper scroll
-      let lastTouchEnd = 0;
-      document.addEventListener('touchend', function (event) {
-        const now = Date.now();
-        if (now - lastTouchEnd <= 300) {
-          event.preventDefault();
-        }
-        lastTouchEnd = now;
-      }, { passive: false });
-    });
-  </script>
+</section>
 
 </body>
 </html>
